--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.4-Alpha4 
	- Fixed Find Duplicates Functionality
	- Added Highest Rated option to Advanced Random
	- Fixed incorrect mime type being set on ASX playlists
	- Fixed problem where you couldn't change playlist type 
		(Thx Karl Hungus) 
	- Fixed potential issue with display on some preferences
	- Added Length to Advanced Random and removed Minutes from methods 
	- Added function exists check for session with redirect to /test.php
		on failure
	- Fixed incorrect extension and stream command being sent when using
		transcode for type other then mp3
	- Fixed default flac downsample command, removed -r as flac decode
		appears to not be raw pcm
	- Fixed download filename to match the catalog filename pattern
	- Added downloads back to stats tracking 
	- Fixed disable/re-enable of users
	- Fixed a bug where ajax actions wouldn't trigger a redirect to login
		when session expired, instead they would just break
	- Fixed a bug with Random Play if you had no artists/albums/playlists
	- Fixed Admin's ability to modify other users preferences
	- Added User and Manager levels to Localplay, determines what the
		user in question can do
	- Moved Newest * to statistics page
	- Database Update, removed useless config options and tweaked a few others
	- Fixed last of the missing MPD functionality (Volume & Playlist Clear)
	- Fixed HTTPQ and improved parsing for urls from MPD & HTTPQ
		they now reconize Democratic Playlists
	- Added paging to genre sub-pages
	- Added missing song data fields to single song view
	- Fixed display issue with playlists when deleting a song
	- Fixed sorting of 'add to Playlist' menu on rightbar