@@ -725,13 +725,13 @@ class Song {
 	        $year   = $this->year;
 
 	        /* Start replacing stuff */
-	        $replace_array = array('%a','%A','%t','%T','%y','%g');
-	        $content_array = array($artist,$album,$title,$track,$year,$genre);
+	        $replace_array = array('%a','%A','%t','%T','%y','%g','/','\\');
+	        $content_array = array($artist,$album,$title,$track,$year,$genre,'-','-');
 
 	        $rename_pattern = str_replace($replace_array,$content_array,$catalog->rename_pattern);
 	
 	        $rename_pattern = preg_replace("[\-\:\!]","_",$rename_pattern);
-
+		
 		$this->f_pattern	= $rename_pattern; 
 	        $this->f_file 		= $rename_pattern . "." . $extension;
 
