@@ -309,7 +309,7 @@ class Stream {
 
 	        header("Cache-control: public");
         	header("Content-Disposition: filename=playlist.asx");
-		header("Content-Type: audio/x-ms-wax;");
+		header("Content-Type: audio/x-ms-wmv;");
  
 		echo "<ASX version = \"3.0\" BANNERBAR=\"AUTO\">\n";
                 echo "<TITLE>Ampache ASX Playlist</TITLE>";
